Managing date for project (insert), checking how to render it with #temporals

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,18 @@
 			<artifactId>moneta</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<!--test-->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-java8time</artifactId>
+			<version>2.1.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>5.0.12.Final</version>
+		</dependency>
+		<!--end test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
