--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.datasource.password = margaux_12tree
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
-
+spring.datasource.tomcat.max-wait=1000
+spring.datasource.tomcat.max-active=2
+spring.datasource.tomcat.max-age=1
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
