--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 # Set here configurations for the database connection
 
-# Connection url for the database "netgloo_blog"
+# Connection url for the database "margaux"
 spring.datasource.url = jdbc:mysql://localhost:3306/margaux_12tree?useSSL=false
 
 # Username and password
@@ -15,7 +15,7 @@ spring.datasource.password = margaux_12tree
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.datasource.tomcat.max-wait=1000
-spring.datasource.tomcat.max-active=2
+spring.datasource.tomcat.max-active=5
 spring.datasource.tomcat.max-age=1
 # ===============================
 # = JPA / HIBERNATE
@@ -40,4 +40,6 @@ spring.jpa.hibernate.naming.strategy= org.hibernate.cfg.DefaultComponentSafeNami
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.properties.hibernate.current_session_context_class= org.springframework.orm.hibernate4.SpringSessionContext
-
+# Logging
+#logging.level.org.springframework.web = DEBUG
+#logging.level.org.hibernate = DEBUG
