--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "margaux"
-spring.datasource.url = jdbc:mysql://localhost:3306/margaux_12tree?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/margaux2?useSSL=false
 
 # Username and password
 spring.datasource.username = margaux_12tree
