Simple Chart done. Needs layout git add .  Doing timeline for harvest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,5 @@ spring.jpa.properties.hibernate.current_session_context_class= org.springframewo
 # Logging
 #logging.level.org.springframework.web = DEBUG
 #logging.level.org.hibernate = DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
