--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,9 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 		<dependency>
-			<groupId>org.thymeleaf.extras</groupId>
-			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>3.0.2.RELEASE</version>
 		</dependency>
 
 	</dependencies>
