Fixing plot service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,7 @@ spring.jpa.properties.hibernate.current_session_context_class= org.springframewo
 #logging.level.org.hibernate = DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+spring.devtools.livereload.enabled=true
 #Thymeleaf
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.suffix=.html
