--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+			<version>3.0.2.RELEASE</version>
 		</dependency>
 
 	</dependencies>
